--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = ntfs-3g
-url = https://tuxera.com/opensource/ntfs-3g_ntfsprogs-2017.3.23.tgz
+url = https://tuxera.com/opensource/ntfs-3g_ntfsprogs-2021.8.22.tgz
 archives = 
-giturl = 
+giturl = https://github.com/tuxera/ntfs-3g
 domain = 
 alias = 
 
